added banner section

--- a/index.html
+++ b/index.html
@@ -5,8 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reset portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <section>
+        <div class="top-section">
+          <div class="text-section half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">My Star</span> World!</h1>
+            <h3>Great Person Here! </h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati voluptatibus consectetur corrupti quis. Ab in, repellat similique accusantium cupiditate animi.</p>
+            <a class="button-gradient" target="_blank" href="https://www.linkedin.com/feed/">Hire Me</a>
+          </div>
+          <div class="image-section half-width">
+            <img src="my-bg.png" alt="">
+          </div>
+        </div>
+        <div class="middle-section">
+            <div class="half-width">
+                <img src="my-bg2.png" alt="">
+            </div>
+            <div class="half-width">
+                <h1>Dream Big</h1>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
